[project]
name = "lbfdnet_llm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mahammad", email = "mahammad.nabizade@gmail.com"},
]
dependencies = ["numpy>=2.0.2"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
package-dir = "src"     
